add admin component and form to add Album records to firebase db

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="container">
     <ul>
       <li><a routerLink="">Sean's Records</a></li>
+      <li><a routerLink="admin">Admin</a></li>
       <li><a routerLink="about">About</a></li>
       <li><a routerLink="catalog">Catalog</a></li>
     </ul>
