--- a/src/app/edit-album/album-to-edit/album-to-edit.component.css
+++ b/src/app/edit-album/album-to-edit/album-to-edit.component.css
@@ -4,12 +4,14 @@ li {
 .edit-form {
   background-color: #f3f3f3;
   padding: 1em;
+  margin: 0.5em 0;
 }
 input {
   width: 100%;
   border: none;
-  border-bottom: solid 1px #333;
   background-color: rgba(0, 0, 0, 0);
+  border-bottom: solid 1px #999;
+  margin: 0.5em 0;
 }
 input:focus {
   outline-width: 0;
