--- a/src/app/edit-album/album-to-edit/album-to-edit.component.html
+++ b/src/app/edit-album/album-to-edit/album-to-edit.component.html
@@ -1,12 +1,12 @@
 <li>
   <span (click)="showEditForm = !showEditForm" [ngClass]="{currentEdit: showEditForm}">{{album.title}} - {{album.artist}}</span>
   <div *ngIf="showEditForm" class="edit-form">
-    <input #editTitle placeholder="Title: {{album.title}}">
-    <input #editArtist placeholder="Artist: {{album.artist}}">
-    <input #editImage placeholder="Image Src: {{album.image}}">
-    <input #editAudio placeholder="Audio Src: {{album.audio}}">
-    <input #editDescription placeholder="Description: {{album.description}}">
-    <button>Done</button>
-    <button (click)="showEditForm = !showEditForm">Cancel</button>
+    <input #editTitle placeholder="Title: {{album.title}}" [(ngModel)]="album.title">
+    <input #editArtist placeholder="Artist: {{album.artist}}" [(ngModel)]="album.artist">
+    <input #editImage placeholder="Image Src: {{album.image}}" [(ngModel)]="album.image">
+    <input #editAudio placeholder="Audio Src: {{album.audio}}" [(ngModel)]="album.audio">
+    <input #editDescription placeholder="Description: {{album.description}}" [(ngModel)]="album.description">
+    <button (click)="updateAlbumToService(album)">Done</button>
+    <button (click)="showEditForm = !showEditForm;">Cancel</button>
   </div>
 </li>
