--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,19 @@
-<p>
-  auth works!
-</p>
+<h3>Admin login</h3>
+
+<strong>
+  <span *ngIf="user | async">Welcome</span>
+  <span *ngIf="(user | async) == null">please log in</span>
+  {{ (user | async)?.email }}
+  <br>
+</strong>
+
+<div *ngIf="(user | async) == null">
+  <input type="email" #email placeholder="Email">
+  <input type="password" #password placeholder="Password">
+  <button (click)="login(email.value, password.value)">Login</button>
+</div>
+<div *ngIf="user | async" >
+  <button (click)="logout()">Logout</button>
+</div>
+
+<app-admin *ngIf="user | async"></app-admin>
