--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <div class="my-nav">
   <div class="container">
     <ul>
-      <li><a routerLink="">Sean's Records</a></li>
+      <li><a routerLink=""><img id="logo" src="assets/img/logo.png"> Angular Record Store</a></li>
       <li><a routerLink="admin">Admin</a></li>
       <li><a routerLink="about">About</a></li>
       <li><a routerLink="catalog">Catalog</a></li>
+      <li *ngIf="user | async"><em>{{ (user | async)?.email }} is logged in</em></li>
     </ul>
   </div>
 </div>
@@ -13,4 +14,12 @@
   <div class="my-content">
     <router-outlet></router-outlet>
   </div>
+</div>
+
+<div class="my-footer">
+  <ul>
+    <li>email</li>
+    <li>twitter</li>
+    <li>bandcamp</li>
+  </ul>
 </div>
