add upload input for images

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -6,8 +6,7 @@
 <input #newArtist placeholder="Album Artist:">
 <br>
 
-<input #newImage placeholder="Album Image Source:">
-<br>
+<input type="file" #imageUpload>
 
 <input #newAudio placeholder="Album Audio Source:">
 <br>
