add confirmation and img preview for admin file upload

--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -21,3 +21,9 @@ input[type="file"] {
   display: inline-block;
   cursor: pointer;
 }
+#progress {
+  margin-left: 1em;
+}
+.preview-img {
+  width: 1em;
+}
