--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -8,7 +8,7 @@
 <br>
 
 <input type="file" id="imageUpload" [(ngModel)]="image" style="display:none;">
-<div id="image-upload-button" onclick="document.getElementById('imageUpload').click();">Upload Image</div><span id="progress"></span><span id="img-upload-progress" style="display:none;">Success!</span>
+<div id="image-upload-button" onclick="document.getElementById('imageUpload').click();">Upload Image</div><span id="progress"></span>
 
 <input type="text" #nawAudio placeholder="Audio URL" [(ngModel)]="audio">
 
