--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -1,4 +1,4 @@
-<h3>Catalog</h3>
+<p>Catalog: <span>All</span> | <span>Vinyl</span> | <span>Cassette</span> | <span>Digital</span></p>
 
 <div *ngFor="let album of albums" class="record">
   <div class="record-info-wrapper" (click)="goToDetailPage(album)">
