--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -15,6 +15,10 @@ textarea {
 input[type="file"] {
   border-bottom: none;
 }
+select {
+  display: block;
+  margin: 1em 0;
+}
 #image-upload-button {
   padding: 0.5em;
   border: solid 1px #333;
